Remove vi-copy option and utf-8 option.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -61,8 +61,8 @@ set-option -g mouse on
 set-option -g default-terminal "xterm"
 
 # UTF-8設定
-setw -g utf8 on
-set -g status-utf8 on
+# setw -g utf8 on
+# set -g status-utf8 on
 
 ## Vimコピーモード
 # viキーバインド
@@ -73,19 +73,19 @@ bind Space copy-mode
 bind p paste-buffer
 
 # vでマーク開始
-bind -t vi-copy v begin-selection
+# bind -t copy-mode-vi v begin-selection
 
 # Vで行の先頭からマーク開始
-bind -t vi-copy V select-line
+# bind -t copy-mode-vi V select-line
 
 # C-vで矩形選択の切り替え
-bind -t vi-copy C-v rectangle-toggle
+# bind -t copy-mode-vi C-v rectangle-toggle
 
 # yでヤンク
-bind -t vi-copy y copy-selection
+# bind -t copy-mode-vi y copy-selection
 
 # Yで1行ヤンク
-bind -t vi-copy Y copy-line
+# bind -t copy-mode-vi Y copy-line
 
 # 外観
 set-option -g default-terminal screen-256color
