--- a/tmux/.macOS-tmux.conf
+++ b/tmux/.macOS-tmux.conf
@@ -1,11 +1,12 @@
 # Copy mode with vi
-bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
-bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+bind -T copy-mode-vi v send -X begin-selection
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
+bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy"
+bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"
 
 ####
 ## Status line configs
 ####
 
 # status-right format
-set -g status-right "#[fg=colour255,bg=colour236]||#[fg=colour226,bg=colour236]LA: #(tmux-functions get_load_average)||#(tmux-functions get_volume)||#(tmux-functions get_ssid)#[fg=colour255,bg=colour236]||#[fg=colour84,bg=colour236](%a)%b %d,%Y#[fg=colour255,bg=colour236]||%H:%M:%S||#[default]"
+set -g status-right "#[fg=colour255,bg=colour236]||#[fg=colour226,bg=colour236]LA: #(tmux-functions get_load_average)#[fg=colour255,bg=colour236]||#(tmux-functions get_volume)||#(tmux-functions get_ssid)#[fg=colour255,bg=colour236]||#[fg=colour84,bg=colour236](%a)%b %d,%Y#[fg=colour255,bg=colour236]||%H:%M:%S||#[default]"
