--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,3 +1,13 @@
+##################################################
+#   _                                          __
+#  | |_ _ __ ___  _   ___  __  ___ ___  _ __  / _|
+#  | __| '_ ` _ \| | | \ \/ / / __/ _ \| '_ \| |_
+#  | |_| | | | | | |_| |>  < | (_| (_) | | | |  _|
+# (_)__|_| |_| |_|\__,_/_/\_(_)___\___/|_| |_|_|
+#
+##################################################
+
+
 ####
 ## General configs
 ####
@@ -58,6 +68,11 @@ set -g status-left "#[fg=colour9,bg=colour240]#{?client_prefix,#[reverse],} Sess
 #####
 ## Key-binds
 #####
+
+# Vi like copy mode
+setw -g mode-keys vi
+bind -T copy-mode-vi v send -X begin-selection
+unbind -T copy-mode-vi Enter
 
 ########################################
 
