Update tmux conf for macOS

--- a/tmux/.macOS-tmux.conf
+++ b/tmux/.macOS-tmux.conf
@@ -1,3 +1,17 @@
+# Move panes with Vim key bindings
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+bind -r C-h select-window -t :-
+bind -r C-l select-window -t :+
+
+# Resize the pane with Vim key bindings
+bind -r H resize-pane -L 5
+bind -r J resize-pane -D 5
+bind -r K resize-pane -U 5
+bind -r L resize-pane -R 5
+
 # Copy mode with vi
 bind -T copy-mode-vi v send -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
