Update bashrc for macOS

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
 	name = Mitsuhiro Komuro
-	email = applemitkom@gmail.com
+	email = mitsuhiro.komuro@gmail.com
 [core]
 	editor = vim
 	autocrlf = input
