Fix version of simple-vimrc

--- a/.simple-vimrc
+++ b/.simple-vimrc
@@ -10,7 +10,7 @@
 " Vim configration file
 " Author: Mitsuhiro Komuro
 "
-" Version: 2.3.4.b
+" Version: 2.3.5
 " General configs: L24
 " Key configs: L105
 "
