--- a/.gitconfig
+++ b/.gitconfig
@@ -3,7 +3,7 @@
 	email = mitsuhiro.komuro@gmail.com
 [core]
 	editor = vim
-	autocrlf = input
+	autocrlf = false
 [alias]
     agraph = log --graph --oneline --decorate=full -20 --date=short --pretty=format:\"%C(yellow)%h%C(reset) %C(magenta)[%ad]%C(reset)%C(auto)%d%C(reset) %s %C(cyan)@%an%C(reset)\"
     st = status
