--- a/.gitconfig
+++ b/.gitconfig
@@ -7,3 +7,5 @@
 [alias]
     agraph = log --graph --oneline --decorate=full -20 --date=short --pretty=format:\"%C(yellow)%h%C(reset) %C(magenta)[%ad]%C(reset)%C(auto)%d%C(reset) %s %C(cyan)@%an%C(reset)\"
     st = status
+[init]
+	defaultBranch = main
