--- a/lib/vscode-settings.json
+++ b/lib/vscode-settings.json
@@ -1,111 +1,251 @@
 {
-    //For Latex settings
-    "editor.wordSeparators": "./\\()\"'-:,.;<>~!@#$%^&*|+=[]{}`~?　、。「」【】『』（）！？てにをはがのともへでや",
-    "latex-workshop.synctex.afterBuild.enabled": true,
-    "latex-workshop.latex.tools": [
-        {
-          "name": "Latexmk (XeLaTeX)",
-          "command": "latexmk",
-          "args": [
-            "-f", "-gg", "-pv", "-xelatex", "-synctex=1", "-interaction=nonstopmode", "-file-line-error", "%DOC%"
-          ]
-        },
-        {
-          "name": "Latexmk (upLaTeX)",
-          "command": "latexmk",
-          "args": [
-            "-f", "-gg", "-pv", "-synctex=1", "-interaction=nonstopmode", "-file-line-error", "%DOC%"
-          ]
-        },
-        {
-          "name": "Latexmk (pLaTeX)",
-          "command": "latexmk",
-          "args": [
-            "-f", "-gg", "-pv", "-latex='platex'", "-latexoption='-kanji=utf8 -no-guess-input-env'", "-synctex=1", "-interaction=nonstopmode", "-file-line-error", "%DOC%"
-          ]
-        },
-        {
-          "name": "Latexmk (LuaLaTeX)",
-          "command": "latexmk",
-          "args": [
-            "-f", "-gg", "-pv", "-lualatex", "-synctex=1", "-interaction=nonstopmode", "-file-line-error", "%DOC%"
-          ]
-        }
-    ],
-    "latex-workshop.latex.recipes": [
-        /* {
-          "name": "XeLaTeX",
-          "tools": [
-            "Latexmk (XeLaTeX)"
-          ]
-        },
-        {
-          "name": "upLaTeX",
-          "tools": [
-            "Latexmk (upLaTeX)"
-          ]
-        }, */
-        {
-          "name": "pLaTeX",
-          "tools": [
-            "Latexmk (pLaTeX)"
-          ]
-        },
-        {
-          "name": "LuaLaTeX",
-          "tools": [
-            "Latexmk (LuaLaTeX)"
-          ]
-        }
-    ],
-    "latex-workshop.latex.magic.args": [
-        "-f", "-gg", "-pv", "-synctex=1", "-interaction=nonstopmode", "-file-line-error", "%DOC%"
-    ],
-    "latex-workshop.latex.clean.fileTypes": [
-        "*.aux", "*.bbl", "*.blg", "*.idx", "*.ind", "*.lof", "*.lot", "*.out", "*.toc", "*.acn", "*.acr", "*.alg", "*.glg", "*.glo", "*.gls", "*.ist", "*.fls", "*.log", "*.fdb_latexmk", "*.synctex.gz",
-        // for Beamer files
-        "_minted*", "*.nav", "*.snm", "*.vrb",
-    ],
-    "latex-workshop.view.pdf.viewer": "tab",
-    
-　　 "editor.renderControlCharacters": true,
-    "workbench.iconTheme": "material-icon-theme",
-    "workbench.colorTheme": "Dracula",
-    "editor.minimap.enabled": false,
-    "editor.fontFamily": "'Roboto Mono Medium for Powerline', Menlo, Monaco, 'Courier New', monospace",
-    "editor.fontSize": 18,
-    "beautify.language": {
-        "js": {
-            "type": ["javascript", "json", "jsonc"],
-            "filename": [".jshintrc", ".jsbeautifyrc"]
-        },
-        "css": ["css", "scss"],
-        "html": ["htm", "html", "erb"],
-        "ruby": ["rb"]
-    },
-    "editor.tabSize": 2,
-    "markdown.preview.breaks": true,
-    "window.zoomLevel": 0,
-    "java.configuration.checkProjectSettingsExclusions": false,
-    "python.jediEnabled": false,
-    "[javascript]": {
-        "editor.tabSize": 2
-    },
-    "[html]": {
-        "editor.tabSize": 2
-    },
-    "[java]": {
-        "editor.tabSize": 4
-    },
-    "[python]": {
-        "editor.tabSize": 4
-    },
+    "workbench.colorTheme": "GitHub Dark",
     "editor.suggestSelection": "first",
     "vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue",
-    "[latex]": {},
+    "editor.fontFamily": "'Roboto Mono For Powerline','Roboto Mono for Powerline'",
+    "editor.fontSize": 16,
+    // Markdown Settings
+    "markdown.preview.fontFamily": "-apple-system, 'Noto Sans JP', BlinkMacSystemFont, 'Segoe WPC', 'Segoe UI', system-ui, 'Ubuntu', 'Droid Sans', sans-serif",
+    // Golang Settings
+    "go.useLanguageServer": true,
+    "go.languageServerExperimentalFeatures": {
+        "format": true,
+        "autoComplete": true,
+        "rename": true,
+        "goToDefinition": true,
+        "hover": true,
+        "signatureHelp": true,
+        "goToTypeDefinition": true,
+        "goToImplementation": true,
+        "documentSymbols": true,
+        "workspaceSymbols": true,
+        "findReferences": true,
+        "diagnostics": true
+    },
+    "[go]": {
+        "editor.snippetSuggestions": "none",
+        "editor.formatOnSave": true,
+        "editor.codeActionsOnSave": {
+            "source.organizeImports": true
+        },
+    },
+    // C# config
+    "[csharp]": {
+        "editor.defaultFormatter": "ms-dotnettools.csharp",
+    },
+    // Dart config
+    "[dart]": {
+        "editor.formatOnSave": true,
+        "editor.formatOnType": true,
+        "editor.rulers": [
+            80
+        ],
+        "editor.selectionHighlight": false,
+        "editor.suggest.snippetsPreventQuickSuggestions": false,
+        "editor.suggestSelection": "first",
+        "editor.tabCompletion": "onlySnippets",
+        "editor.wordBasedSuggestions": false
+    },
+    // Ruby config
+    "[ruby]": {
+        "editor.tabSize": 2,
+    },
+    // GitHub config
+    "githubIssues.queries": [
+        {
+            "label": "My Issues",
+            "query": "default"
+        },
+        {
+            "label": "Created Issues",
+            "query": "author:${user} state:open repo:${owner}/${repository} sort:updated-desc"
+        }
+    ],
+    // For VS codespace
+    "codespaces.accountProvider": "Microsoft",
+    "codespaces.planFilter": "/subscriptions/33a42a97-9026-4129-bcce-7ba695a76a09/resourceGroups/vso-rg-3211af3/providers/Microsoft.VSOnline/plans/vso-plan-southeastasia",
+    // For Python
+    "python.jediEnabled": false,
+    "python.languageServer": "Pylance",
+    // For Java
+    "java.semanticHighlighting.enabled": true,
+    "java.home": "/Library/Java/JavaVirtualMachines/adoptopenjdk-11.jdk/Contents/Home/",
+    "java.requirements.JDK11Warning": false,
+    "java.refactor.renameFromFileExplorer": "autoApply",
+    "files.exclude": {
+        "**/.classpath": true,
+        "**/.project": true,
+        "**/.settings": true,
+        "**/.factorypath": true
+    },
+    // For Debug config
+    "launch": {
+        // Use IntelliSense to learn about possible attributes.
+        // Hover to view descriptions of existing attributes.
+        // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+        "version": "0.2.0",
+        "configurations": [
+            { // Java
+                "type": "java",
+                "name": "Debug {Launch} - Current File",
+                "request": "launch",
+                "mainClass": "${file}",
+                "console": "internalConsole",
+            },
+            { // Kotlin
+                "type": "kotlin",
+                "request": "launch",
+                "name": "Kotlin Launch",
+                "projectRoot": "${workspaceFolder}",
+                "mainClass": "${file}",
+                "console": "internalConsole",
+            },
+            { // Chrome
+                "type": "chrome",
+                "request": "launch",
+                "name": "Launch Chrome against localhost",
+                "url": "http://localhost:8080",
+                "webRoot": "${workspaceFolder}",
+                "console": "internalConsole",
+            },
+            { // Flutter for Web
+                "name": "Flutter for web",
+                "request": "launch",
+                "type": "dart",
+                "args": [
+                    "--web-enable-expression-evaluation --web-port=8080  --verbose"
+                ],
+                "console": "internalConsole",
+            },
+            { // Flutter
+                "name": "Flutter",
+                "request": "launch",
+                "type": "dart",
+                "console": "internalConsole",
+            },
+            { // Dart
+                "name": "Dart",
+                "program": "${file}",
+                "request": "launch",
+                "type": "dart"
+            },
+            { // Browser-preview (Attach)
+                "type": "browser-preview",
+                "request": "attach",
+                "name": "Browser Preview: Attach",
+                "console": "internalConsole",
+            },
+            { // Browser-preview (Launch)
+                "type": "browser-preview",
+                "request": "launch",
+                "name": "Angular Preview Launch",
+                "url": "http://localhost:4200",
+                "console": "internalConsole",
+            },
+            { // Python
+                "name": "Python: Current File",
+                "type": "python",
+                "request": "launch",
+                "program": "${file}",
+                "console": "internalConsole",
+                "redirectOutput": true,
+                "internalConsoleOptions": "openOnSessionStart",
+            },
+            { // Go (Launch Package)
+                "name": "Go (Launch Package)",
+                "type": "go",
+                "request": "launch",
+                "mode": "debug",
+                "program": "${workspaceFolder}"
+            },
+            { // Go (Launch file)
+                "name": "Go (Launch file)",
+                "type": "go",
+                "request": "launch",
+                "mode": "debug",
+                "program": "${file}"
+            },
+            {
+                "name": "Go (Launch with host and port)",
+                "type": "go",
+                "request": "launch",
+                "mode": "auto",
+                "host": "127.0.0.1",
+                "port": 8080,
+                "program": "${fileDirname}",
+                "env": {},
+                "args": []
+            },
+        ]
+    },
+    // Remote config
+    // Code Runner
+    "code-runner.executorMap": {
+        "kotlin": "cd $dir && kotlinc-jvm $fileName -include-runtime -d $fileNameWithoutExt.jar && java -jar $fileNameWithoutExt.jar"
+    },
+    "window.titleBarStyle": "custom",
     "vs-kubernetes": {
-      "vs-kubernetes.helm-path": "/Users/mitsuhiro/.vs-kubernetes/tools/helm/darwin-amd64/helm",
-      "vs-kubernetes.minikube-path": "/Users/mitsuhiro/.vs-kubernetes/tools/minikube/darwin-amd64/minikube",
-      "vs-kubernetes.draft-path": "/Users/mitsuhiro/.vs-kubernetes/tools/draft/darwin-amd64/draft"
-    }
+        "vs-kubernetes.kubectl-path.linux": "/home/mitsuhiro/.vs-kubernetes/tools/kubectl/kubectl",
+        "vs-kubernetes.minikube-path.linux": "/home/mitsuhiro/.vs-kubernetes/tools/minikube/linux-amd64/minikube",
+        "vs-kubernetes.helm-path.linux": "/home/mitsuhiro/.vs-kubernetes/tools/helm/linux-amd64/helm",
+        "vs-kubernetes.draft-path.linux": "/home/mitsuhiro/.vs-kubernetes/tools/draft/linux-amd64/draft"
+    },
+    "github.codespaces.showPerformanceExplorer": true,
+    "git.autofetch": true,
+    "sqltools.connections": [
+        {
+            "mysqlOptions": {
+                "authProtocol": "default"
+            },
+            "previewLimit": 50,
+            "server": "127.0.0.1",
+            "port": 3306,
+            "askForPassword": true,
+            "driver": "MySQL",
+            "database": "test_db",
+            "username": "test",
+            "name": "MySQL Docker"
+        }
+    ],
+    "debug.openDebug": "openOnSessionStart",
+    "[jsonc]": {
+        "editor.defaultFormatter": "vscode.json-language-features"
+    },
+    "dart.debugExternalLibraries": false,
+    "dart.debugSdkLibraries": false,
+    "terminal.integrated.fontFamily": "'RobotoMono NF'",
+    "terminal.integrated.fontSize": 15,
+    "terminal.integrated.defaultProfile.windows": "Git Bash",
+    "terminal.integrated.tabs.location": "left",
+    "bracket-pair-colorizer-2.depreciation-notice": false,
+    "bracketPairColorizer.depreciation-notice": false,
+    "gitlens.hovers.currentLine.over": "line",
+    "gitlens.currentLine.enabled": false,
+    "gitlens.codeLens.scopes": [
+        "containers"
+    ],
+    "gitlens.hovers.enabled": false,
+    "terminal.integrated.inheritEnv": false,
+    "notebook.lineNumbers": "on",
+    "jupyter.askForKernelRestart": false,
+    "redhat.telemetry.enabled": false,
+    "[typescript]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode",
+        "editor.formatOnSave": true,
+    },
+    "editor.inlineSuggest.enabled": true,
+    "workbench.iconTheme": "material-icon-theme",
+    "editor.minimap.maxColumn": 60,
+    "terminal.integrated.minimumContrastRatio": 1,
+    "markdown-preview-enhanced.hideDefaultVSCodeMarkdownPreviewButtons": false,
+    "markdown-preview-enhanced.previewTheme": "one-dark.css",
+    "[markdown]": {
+        "editor.defaultFormatter": "yzhang.markdown-all-in-one"
+    },
+    "[javascript]": {
+        "editor.defaultFormatter": "vscode.typescript-language-features"
+    },
+    "[less]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
 }
