update git, bat and lazygit configs

--- a/.gitconfig
+++ b/.gitconfig
@@ -4,7 +4,7 @@
 
 [core]
 	editor = nvim
-	autocrlf = input
+  autocrlf = input
   pager = delta
 
 [alias]
@@ -24,9 +24,10 @@
   diffFilter = delta --color-only
 
 [delta]
-  line-number = true
+  line-numbers = true
   navigate = true    # use n and N to move between diff sections
   light = false      # set to true if you're in a terminal w/ a light background color (e.g. the default macOS terminal)
+  side-by-side = true
 
 [merge]
   conflictstyle = diff3
