feat(brewfile): add koekeishiya/formulae tap and yabai package

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -1,6 +1,5 @@
+tap "koekeishiya/formulae"
 tap "rcmdnk/file"
-
-brew "git"
 brew "bat"
 brew "docker-compose"
 brew "duf"
@@ -10,6 +9,7 @@ brew "ffmpeg"
 brew "fzf"
 brew "gcc"
 brew "gh"
+brew "git"
 brew "git-delta"
 brew "glab"
 brew "gnupg"
@@ -26,8 +26,8 @@ brew "zellij"
 brew "zoxide"
 brew "zsh-autosuggestions"
 brew "zsh-completions"
+brew "koekeishiya/formulae/yabai"
 cask "1password-cli"
-
 cask "audacity"
 cask "discord"
 cask "google-chrome"
@@ -45,5 +45,4 @@ cask "raycast"
 cask "slack"
 cask "spotify"
 cask "steam"
-
 vscode "anthropic.claude-code"
