feat(brewfile): add skhd package to Brewfile and create yabai configuration file

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -18,6 +18,7 @@ brew "lazygit"
 brew "libyaml"
 brew "neovim"
 brew "nodebrew"
+brew "pinentry-mac"
 brew "procs"
 brew "rbenv"
 brew "scrcpy"
@@ -26,6 +27,7 @@ brew "zellij"
 brew "zoxide"
 brew "zsh-autosuggestions"
 brew "zsh-completions"
+brew "koekeishiya/formulae/skhd"
 brew "koekeishiya/formulae/yabai"
 cask "1password-cli"
 cask "audacity"
