feat(tmux): modified tmux-setup.sh

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -59,6 +59,7 @@ set -g @plugin 'tmux-plugins/tmux-pain-control'
 
 ## Plugin configs
 set -g @tmux-weather-format "%c+%t+%w"
+set -g @tmux-weather-units "M"
 
 # tmux general configs
 set -g default-terminal "xterm-256color"
