feat(spotify-player): add spotify-plyaer config

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -1,11 +1,11 @@
 tap "koekeishiya/formulae"
 tap "rcmdnk/file"
 brew "bat"
+brew "ffmpeg"
 brew "docker-compose"
 brew "duf"
 brew "dust"
 brew "eza"
-brew "ffmpeg"
 brew "fzf"
 brew "gcc"
 brew "gh"
@@ -16,13 +16,17 @@ brew "gnupg"
 brew "lazydocker"
 brew "lazygit"
 brew "libyaml"
+brew "mpd", restart_service: :changed
 brew "neovim"
 brew "nodebrew"
+brew "nodenv"
 brew "pinentry-mac"
 brew "procs"
 brew "rbenv"
+brew "rust"
 brew "scrcpy"
 brew "starship"
+brew "tmux"
 brew "zellij"
 brew "zoxide"
 brew "zsh-autosuggestions"
