--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -6,6 +6,7 @@ brew "docker-compose"
 brew "duf"
 brew "dust"
 brew "eza"
+brew "fd"
 brew "fzf"
 brew "gcc"
 brew "gh"
@@ -13,6 +14,7 @@ brew "git"
 brew "git-delta"
 brew "glab"
 brew "gnupg"
+brew "imagemagick"
 brew "lazydocker"
 brew "lazygit"
 brew "libyaml"
@@ -23,6 +25,7 @@ brew "nodenv"
 brew "pinentry-mac"
 brew "procs"
 brew "rbenv"
+brew "ripgrep"
 brew "rust"
 brew "scrcpy"
 brew "starship"
