--- a/dev/ghostty/config
+++ b/dev/ghostty/config
@@ -1,14 +1,23 @@
 # Font configs
 font-family = "MoralerspaceNF Neon"
 font-size = 18 
+font-thicken
 
 # Terminal UI configs
 theme = "Github Dark"
 window-width = 140
 window-height = 40
+mouse-hide-while-typing
+macos-non-native-fullscreen = true
+macos-titlebar-style = transparent
+title = " "
+window-padding-x = 5
+window-padding-y = 5
+window-padding-balance = true
 
 # Shell configs
 command = /bin/zsh
 shell-integration = zsh
 cursor-style = block
+cursor-style-blink = false
 
