feat(nvim): add some dap config

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -16,7 +16,8 @@ set -g @catppuccin_window_default_fill "number"
 set -g @catppuccin_window_text " #W"
 
 set -g @catppuccin_window_current_fill "number"
-set -g @catppuccin_window_current_text " #(~/.local/bin/tmux-short-path.sh '#{pane_current_path}')::#W" 
+# set -g @catppuccin_window_current_text " #(~/.local/bin/tmux-short-path.sh '#{pane_current_path}')::#W" 
+set -g @catppuccin_window_current_text "#W"
 
 # set -g @catppuccin_icon_window_last "󰖰"
 # set -g @catppuccin_icon_window_current "󰖯"
@@ -53,8 +54,9 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'tmux-plugins/tmux-cpu'
 set -g @plugin 'xamut/tmux-weather'
-set -g @plugin 'sainnhe/tmux-fzf'
+# set -g @plugin 'sainnhe/tmux-fzf'
 set -g @plugin 'catppuccin/tmux'
+set -g @plugin 'alexwforsythe/tmux-which-key'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
 
 ## Plugin configs
