feat(nvim): add neotest configs

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -10,6 +10,7 @@ brew "fd"
 brew "fzf"
 brew "gcc"
 brew "gh"
+brew "ghq"
 brew "git"
 brew "git-delta"
 brew "glab"
@@ -24,6 +25,8 @@ brew "nodebrew"
 brew "nodenv"
 brew "pinentry-mac"
 brew "procs"
+brew "pyenv"
+brew "ruby-build"
 brew "rbenv"
 brew "ripgrep"
 brew "rust"
