--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -32,7 +32,7 @@ set -g @catppuccin_window_current_text " #W"
 # set -g @catppuccin_status_fill "icon"
 
 # set -g @catppuccin_directory_text "#{pane_current_path}"
-# set -g @catppuccin_date_time_text "%Y-%m-%d %H:%M:%S"
+set -g @catppuccin_date_time_text " %Y-%m-%d %H:%M:%S"
 
 run '~/.tmux/plugins/tmux/catppuccin.tmux'
 
@@ -46,6 +46,7 @@ set -agF status-right "#{E:@catppuccin_status_cpu}"
 set -ag status-right "#{E:@catppuccin_status_session}"
 # set -ag status-right "#{E:@catppuccin_status_uptime}"
 set -agF status-right "#{E:@catppuccin_status_load}"
+set -agF status-right "#{E:@catppuccin_status_date_time}"
 set -agF status-right "#{E:@catppuccin_status_battery}"
 
 # Plugins
