feat(tmux): add resize key config for pane

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -86,6 +86,12 @@ bind -r k select-pane -U
 bind -r h select-pane -L
 bind -r l select-pane -R
 
+## Pane resizing with prefix + Option+Arrow keys
+bind -r M-Up resize-pane -U 5
+bind -r M-Down resize-pane -D 5
+bind -r M-Left resize-pane -L 5
+bind -r M-Right resize-pane -R 5
+
 # FZF configs
 TMUX_FZF_LAUNCH_KEY="C-f"
 TMUX_FZF_OPTIONS='--height 40% -w 60% --border --inline-info --color=border:#94e2d5 --preview "bat --style=numbers --color=always --line-range :200 {}" --preview-window=+{2}+3/2 --color=fg:#a9b1d6,hl:#f5c2e7,fg+:#a6e3a1,bg+:#1a1b26,hl+:#fab387'
