feat(tmux): update timux status line order

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -7,13 +7,12 @@ set -g @catppuccin_flavor "mocha"
 set -g @catppuccin_window_status_style "rounded"
 set -g @catppuccin_status_connect_separator "no"
 set -g @catppuccin_status_right_separator " "
-# set -g @catppuccin_window_left_separator ""
-# set -g @catppuccin_window_right_separator " "
-# set -g @catppuccin_window_middle_separator " █ "
-# set -g @catppuccin_window_number_position "right"
+set -g @catppuccin_window_left_separator ""
+set -g @catppuccin_window_middle_separator " █ "
+set -g @catppuccin_window_number_position "right"
 
 set -g @catppuccin_window_default_fill "number"
-set -g @catppuccin_window_text " #W"
+set -g @catppuccin_window_text "#W"
 
 set -g @catppuccin_window_current_fill "number"
 # set -g @catppuccin_window_current_text " #(~/.local/bin/tmux-short-path.sh '#{pane_current_path}')::#W" 
@@ -31,19 +30,20 @@ set -g @catppuccin_window_current_text " #W"
 # set -g @catppuccin_status_left_separator  " "
 # set -g @catppuccin_status_fill "icon"
 
-# set -g @catppuccin_directory_text "#{pane_current_path}"
+set -g @catppuccin_directory_text " #(~/.local/bin/tmux-short-path.sh '#{pane_current_path}')"
 set -g @catppuccin_date_time_text " %Y-%m-%d %H:%M:%S"
 
 run '~/.tmux/plugins/tmux/catppuccin.tmux'
 
 ## Make the status line pretty and add some modules
 set -g status-right-length 100
-set -g status-left-length 100
-set -g status-left ""
+set -g status-left-length 100 
+set -g status-left "#{E:@catppuccin_status_session}"
 # set -g status-right "#{E:@catppuccin_status_application}"
+# set -gF status-right "#{E:@catppuccin_status_directory}"
 set -gF status-right "#{E:@catppuccin_status_weather}"
 set -agF status-right "#{E:@catppuccin_status_cpu}"
-set -ag status-right "#{E:@catppuccin_status_session}"
+# set -ag status-right "#{E:@catppuccin_status_session}"
 # set -ag status-right "#{E:@catppuccin_status_uptime}"
 set -agF status-right "#{E:@catppuccin_status_load}"
 set -agF status-right "#{E:@catppuccin_status_battery}"
@@ -51,28 +51,54 @@ set -agF status-right "#{E:@catppuccin_status_date_time}"
 
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'tmux-plugins/tmux-cpu'
+# set -g @plugin 'tmux-plugins/tmux-resurrect'
+# set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'tmux-plugins/tmux-pain-control'
 set -g @plugin 'xamut/tmux-weather'
-# set -g @plugin 'sainnhe/tmux-fzf'
+set -g @plugin 'sainnhe/tmux-fzf'
+set -g @plugin 'wfxr/tmux-fzf-url'
 set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'alexwforsythe/tmux-which-key'
-set -g @plugin 'tmux-plugins/tmux-pain-control'
+set -g @plugin 'omerxx/tmux-sessionx'
 
 ## Plugin configs
 set -g @tmux-weather-format "%c+%t+%w"
 set -g @tmux-weather-units "M"
 
+set -g @sessionx-bind-zo-new-window 'ctrl-y'
+set -g @sessionx-auto-accept 'off'
+set -g @sessionx-custom-paths '/Users/omerxx/dotfiles'
+set -g @sessionx-bind 'o'
+set -g @sessionx-x-path '~/dotfiles'
+set -g @sessionx-window-height '85%'
+set -g @sessionx-window-width '75%'
+set -g @sessionx-zoxide-mode 'on'
+set -g @sessionx-custom-paths-subdirectories 'false'
+set -g @sessionx-filter-current 'false'
+
+# set -g @continuum-restore 'on'
+# set -g @continuum-save-interval '5'
+# set -g @resurrect-strategy-nvim 'session'
+
 # tmux general configs
-set -g default-terminal "xterm-256color"
-set-option -ga terminal-overrides ",xterm-256color:Tc"
+set-option -g default-terminal "xterm-256color"
+set-option -g terminal-overrides ",xterm-256color:Tc"
 set -g status-position top
 set -g status-interval 1
+set -g detach-on-destroy off
 set -g mouse on
 set -g allow-passthrough on
 set -ga update-environment TERM
 set -ga update-environment TERM_PROGRAM
+set -g base-index 1
+set -g escape-time 0
+set -g history-limit 1000000
+set -g renumber-windows on
+set -g set-clipboard on
 
 ## Configs for vi mode
 setw -g mode-keys vi
