feat(skhd): update keybinds

--- a/configs/starship.toml
+++ b/configs/starship.toml
@@ -94,6 +94,8 @@ min_time = 5000
 symbol = "󰸏"
 style = "bg:#212736"
 format = '[[](fg:#212736)[$symbol ($profile )(\($region\))](fg:#769ff0 bg:#212736)[ ](fg:#212736)]($style)'
+force_display = true
+disabled = false
 
 [conda]
 symbol = ""
