--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -41,8 +41,8 @@ set -g status-left-length 100
 set -g status-left "#{E:@catppuccin_status_session}"
 # set -g status-right "#{E:@catppuccin_status_application}"
 # set -gF status-right "#{E:@catppuccin_status_directory}"
-set -gF status-right "#{E:@catppuccin_status_weather}"
-set -agF status-right "#{E:@catppuccin_status_cpu}"
+# set -gF status-right "#{E:@catppuccin_status_weather}"
+set -gF status-right "#{E:@catppuccin_status_cpu}"
 # set -ag status-right "#{E:@catppuccin_status_session}"
 # set -ag status-right "#{E:@catppuccin_status_uptime}"
 set -agF status-right "#{E:@catppuccin_status_load}"
