--- a/.gitconfig
+++ b/.gitconfig
@@ -7,6 +7,7 @@
 	editor = nvim
   autocrlf = input
   pager = delta
+	excludesfile = ~/.gitignore_global
 
 [alias]
   a = add -p
@@ -63,5 +64,5 @@
 	program = /opt/homebrew/bin/gpg
 
 [ghq]
-  root = /Users/nekorush14/Developer/ghq
+  root = ~/Developer/ghq
 
