--- a/configs/ghostty/config
+++ b/configs/ghostty/config
@@ -1,6 +1,6 @@
 # Font configs
 font-family = "Moralerspace Neon"
-font-size = 16 
+font-size = 14 
 font-thicken
 
 # Terminal UI configs
@@ -10,11 +10,15 @@ window-width = 140
 window-height = 40
 mouse-hide-while-typing
 macos-non-native-fullscreen = true
-macos-titlebar-style = transparent
+macos-titlebar-style = hidden
 title = " "
 window-padding-x = 5
 window-padding-y = 5
 window-padding-balance = true
+
+quick-terminal-position = "top"
+quick-terminal-screen = "main"
+quick-terminal-animation-duration = 0
 
 # Shell configs
 command = /bin/zsh
@@ -23,3 +27,4 @@ cursor-style = block
 cursor-style-blink = false
 
 keybind = shift+enter=text:\n
+keybind = "global:ctrl+shift+t=toggle_quick_terminal"
