--- a/configs/ghostty/config
+++ b/configs/ghostty/config
@@ -26,5 +26,5 @@ shell-integration = zsh
 cursor-style = block
 cursor-style-blink = false
 
-keybind = shift+enter=text:\n
 keybind = "global:ctrl+shift+t=toggle_quick_terminal"
+keybind = shift+enter=text:\x1b\r
