--- a/.gitconfig
+++ b/.gitconfig
@@ -31,6 +31,7 @@
   w = worktree
   wb = "!f() { WORKTREE_PATH=../$(basename $(pwd))-${1}; git worktree add $WORKTREE_PATH $2; }; f"
   wd = worktree remove .
+  diffs = diff --staged
   
 [init]
 	defaultBranch = main
