--- a/.markdownlint-cli2.jsonc
+++ b/.markdownlint-cli2.jsonc
@@ -1,6 +1,7 @@
 {
   "config": {
-    "MD013": false, // Disables the "Line length" rule
-    "MD001": false // Disables the "Heading levels should only increment by one at a time" rule
+    "MD013": false,
+    "MD032": false,
+    "MD036": false
   }
 }
