--- a/configs/ghostty/config
+++ b/configs/ghostty/config
@@ -2,6 +2,18 @@
 font-family = "Moralerspace Neon"
 font-size = 20 
 font-thicken
+font-feature = "liga"
+font-feature = "calt"
+font-feature = "ss01"
+font-feature = "ss02"
+font-feature = "ss03"
+font-feature = "ss04"
+font-feature = "ss05"
+font-feature = "ss06"
+font-feature = "ss07"
+font-feature = "ss08"
+font-feature = "ss09"
+font-feature = "ss10"
 
 # Terminal UI configs
 theme = "TokyoNight"
