--- a/configs/yazi/theme.toml
+++ b/configs/yazi/theme.toml
@@ -1,3 +1,5 @@
 [flavor]
-dark = "catppuccin-mocha"
+# dark = "catppuccin-mocha"
+# ya pkg add BennyOe/tokyo-night
+dark = "tokyo-night"
 # ya pkg add yazi-rs/flavors:catppuccin-mocha
