--- a/configs/yazi/yazi.toml
+++ b/configs/yazi/yazi.toml
@@ -3,7 +3,7 @@
 "$schema" = "https://yazi-rs.github.io/schemas/yazi.json"
 
 [mgr]
-ratio = [1, 4, 3]
+ratio = [1, 3, 4]
 sort_by = "alphabetical"
 sort_sensitive = false
 sort_reverse = false
@@ -19,12 +19,13 @@ title_format = "Yazi: {cwd}"
 [preview]
 wrap = "no"
 tab_size = 2
-max_width = 600
-max_height = 900
+max_width = 4096
+max_height = 4096
 cache_dir = ""
 image_delay = 30
 image_filter = "triangle"
-image_quality = 75
+image_quality = 90
+sixel_fraction = 15
 ueberzug_scale = 1
 ueberzug_offset = [0, 0, 0, 0]
 
@@ -114,69 +115,71 @@ image_alloc = 536870912    # 512MB
 image_bound = [5000, 5000]
 suppress_preload = false
 
-[plugin]
-fetchers = [
-  # Mimetype
-  { id = "mime", name = "*", run = "mime", prio = "high" },
-]
-spotters = [
-  { name = "*/", run = "folder" },
-  # Code
-  { mime = "text/*", run = "code" },
-  { mime = "application/{mbox,javascript,wine-extension-ini}", run = "code" },
-  # Image
-  { mime = "image/{avif,hei?,jxl}", run = "magick" },
-  { mime = "image/svg+xml", run = "svg" },
-  { mime = "image/*", run = "image" },
-  # Video
-  { mime = "video/*", run = "video" },
-  # Fallback
-  { name = "*", run = "file" },
-]
-preloaders = [
-  # Image
-  { mime = "image/{avif,hei?,jxl}", run = "magick" },
-  { mime = "image/svg+xml", run = "svg" },
-  { mime = "image/*", run = "image" },
-  # Video
-  { mime = "video/*", run = "video" },
-  # PDF
-  { mime = "application/pdf", run = "pdf" },
-  # Font
-  { mime = "font/*", run = "font" },
-  { mime = "application/ms-opentype", run = "font" },
-]
-previewers = [
-  { name = "*/", run = "folder" },
-  # Code
-  { mime = "text/*", run = "code" },
-  { mime = "application/{mbox,javascript,wine-extension-ini}", run = "code" },
-  # JSON
-  { mime = "application/{json,ndjson}", run = "json" },
-  # Image
-  { mime = "image/{avif,hei?,jxl}", run = "magick" },
-  { mime = "image/svg+xml", run = "svg" },
-  { mime = "image/*", run = "image" },
-  # Video
-  { mime = "video/*", run = "video" },
-  # PDF
-  { mime = "application/pdf", run = "pdf" },
-  # Archive
-  { mime = "application/{zip,rar,7z*,tar,gzip,xz,zstd,bzip*,lzma,compress,archive,cpio,arj,xar,ms-cab*}", run = "archive" },
-  { mime = "application/{debian*-package,redhat-package-manager,rpm,android.package-archive}", run = "archive" },
-  { name = "*.{AppImage,appimage}", run = "archive" },
-  # Virtual Disk / Disk Image
-  { mime = "application/{iso9660-image,qemu-disk,ms-wim,apple-diskimage}", run = "archive" },
-  { mime = "application/virtualbox-{vhd,vhdx}", run = "archive" },
-  { name = "*.{img,fat,ext,ext2,ext3,ext4,squashfs,ntfs,hfs,hfsx}", run = "archive" },
-  # Font
-  { mime = "font/*", run = "font" },
-  { mime = "application/ms-opentype", run = "font" },
-  # Empty file
-  { mime = "inode/empty", run = "empty" },
-  # Fallback
-  { name = "*", run = "file" },
-]
+# [plugin] section commented out - using yazi defaults for fetchers/spotters/preloaders/previewers
+# See: https://yazi-rs.github.io/docs/configuration/yazi/
+# [plugin]
+# fetchers = [
+#   # Mimetype
+#   { id = "mime", name = "*", run = "mime", prio = "high" },
+# ]
+# spotters = [
+#   { name = "*/", run = "folder" },
+#   # Code
+#   { mime = "text/*", run = "code" },
+#   { mime = "application/{mbox,javascript,wine-extension-ini}", run = "code" },
+#   # Image
+#   { mime = "image/{avif,hei?,jxl}", run = "magick" },
+#   { mime = "image/svg+xml", run = "svg" },
+#   { mime = "image/*", run = "image" },
+#   # Video
+#   { mime = "video/*", run = "video" },
+#   # Fallback
+#   { name = "*", run = "file" },
+# ]
+# preloaders = [
+#   # Image
+#   { mime = "image/{avif,hei?,jxl}", run = "magick" },
+#   { mime = "image/svg+xml", run = "svg" },
+#   { mime = "image/*", run = "image" },
+#   # Video
+#   { mime = "video/*", run = "video" },
+#   # PDF
+#   { mime = "application/pdf", run = "pdf" },
+#   # Font
+#   { mime = "font/*", run = "font" },
+#   { mime = "application/ms-opentype", run = "font" },
+# ]
+# previewers = [
+#   { name = "*/", run = "folder" },
+#   # Code
+#   { mime = "text/*", run = "code" },
+#   { mime = "application/{mbox,javascript,wine-extension-ini}", run = "code" },
+#   # JSON
+#   { mime = "application/{json,ndjson}", run = "json" },
+#   # Image
+#   { mime = "image/{avif,hei?,jxl}", run = "magick" },
+#   { mime = "image/svg+xml", run = "svg" },
+#   { mime = "image/*", run = "image" },
+#   # Video
+#   { mime = "video/*", run = "video" },
+#   # PDF
+#   { mime = "application/pdf", run = "pdf" },
+#   # Archive
+#   { mime = "application/{zip,rar,7z*,tar,gzip,xz,zstd,bzip*,lzma,compress,archive,cpio,arj,xar,ms-cab*}", run = "archive" },
+#   { mime = "application/{debian*-package,redhat-package-manager,rpm,android.package-archive}", run = "archive" },
+#   { name = "*.{AppImage,appimage}", run = "archive" },
+#   # Virtual Disk / Disk Image
+#   { mime = "application/{iso9660-image,qemu-disk,ms-wim,apple-diskimage}", run = "archive" },
+#   { mime = "application/virtualbox-{vhd,vhdx}", run = "archive" },
+#   { name = "*.{img,fat,ext,ext2,ext3,ext4,squashfs,ntfs,hfs,hfsx}", run = "archive" },
+#   # Font
+#   { mime = "font/*", run = "font" },
+#   { mime = "application/ms-opentype", run = "font" },
+#   # Empty file
+#   { mime = "inode/empty", run = "empty" },
+#   # Fallback
+#   { name = "*", run = "file" },
+# ]
 
 [input]
 cursor_blink = false
