feat(ghostty): add keybind for pane sizing

--- a/.gitconfig
+++ b/.gitconfig
@@ -68,3 +68,11 @@
 [ghq]
   root = ~/Developer/ghq
 
+[url "git@github.com:"]
+  pushInsteadOf = https://github.com/
+  pushInsteadOf = git://github.com/
+  insteadOf = https://github.com/
+[url "git@gist.github.com:"]
+  pushInsteadOf = https://gist.github.com/
+  pushInsteadOf = git://gist.github.com/
+
